introduce is_together to ensure align-center when sing together

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,10 @@ body {
     text-align: right;
 }
 
+.lyric-line.is-duet.is-together {
+    text-align: center;
+}
+
 .lyric-phrase {
     display: inline-block;
     white-space: pre;
